--- a/scss/advantages/advantages.scss
+++ b/scss/advantages/advantages.scss
@@ -8,10 +8,7 @@
     }
 
     &__items {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 48px;
+        @include advantagesContainer;
     }
 
     .button {
