--- a/scss/mixin.scss
+++ b/scss/mixin.scss
@@ -8,3 +8,10 @@
     display: flex;
     flex-direction: column;
 }
+
+@mixin advantagesContainer {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 48px;
+}
